Fix: keyframes with wrong margin-left on extends elements

--- a/resources/sass/globals.scss
+++ b/resources/sass/globals.scss
@@ -52,7 +52,7 @@ body {
 
 @keyframes __element__navbar__extends__ {
   0% {
-    margin-left: 20px;
+    margin-left: 0;
   }
   100% {
     margin-left: 140px;
@@ -64,7 +64,7 @@ body {
     margin-left: 140px;
   }
   100% {
-    margin-left: 20px;
+    margin-left: 0;
   }
 }
 
